test/error/string_signed.sv
// pattern: unexpected signed applied to string
module top;
    string signed x;
endmodule
